kubernetes/spack/k8s-spack-io/web/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: k8s
  namespace: spack
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kube-system.svc.cluster.local
  ports:
  - port: 80
