kubernetes/spack/k8s-spack-io/web/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s
  namespace: spack
spec:
  tls:
  - secretName: tls-k8s
  rules:
  - host: k8s.spack.io
    http:
      paths:
      - backend:
          serviceName: k8s
          servicePort: 80
